--- a/Suii/suii_gazebo/controller/arm_controller_ur3.yaml
+++ b/Suii/suii_gazebo/controller/arm_controller_ur3.yaml
@@ -33,3 +33,19 @@ joint_group_position_controller:
     - wrist_2_joint
     - wrist_3_joint
     - ur3_mount_joint
+gripper_controller:
+  type: position_controllers/JointTrajectoryController
+  joints:
+    - leftTilted_link
+    - rightTilted_link
+
+
+  constraints:
+      goal_time: 0.6
+      stopped_velocity_tolerance: 0.05
+      leftTilted_link: {trajectory: 0.1, goal: 0.1}
+      rightTilted_link: {trajectory: 0.1, goal: 0.1}
+     
+  stop_trajectory_duration: 0.5
+  state_publish_rate:  25
+  action_monitor_rate: 10
